--- a/src/home.html
+++ b/src/home.html
@@ -9,6 +9,39 @@
 		@@include('html/_header.htm',{})
 		<main class="page">
 
+			<section class="hero">
+				<div class="hero__container">
+					<div class="hero__body">
+						<h1 class="hero__title">Республиканская ассоциация косметологов</h1>
+						<div class="hero__text">
+							<p>Совершенствуем профессиональные навыки и специализации косметологов Средней Азии с 2018 года</p>
+						</div>
+						<div class="hero__line">
+							<div class="hero__buttons">
+								<button class="hero__button button">СВЯЗАТЬСЯ С НАМИ</button>
+							</div>
+							<div class="hero__social social">
+								<a href="#" class="social__item _icon-youtube"></a>
+								<a href="#" class="social__item _icon-facebook"></a>
+								<a href="#" class="social__item _icon-telegram"></a>
+								<a href="#" class="social__item _icon-instagram"></a>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div class="hero__bg-ibg"><img src="@img/hero/01.jpg" alt=""></div>
+			</section>
+
+
+
+			<!-- <section class="class">
+				<div class="class__container">
+					<div class="class__body">
+
+					</div>
+				</div>
+			</section> -->
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
