--- a/src/home.html
+++ b/src/home.html
@@ -34,6 +34,20 @@
 			</section>
 
 
+			<section class="about-company">
+				<div class="about-company__container">
+					<div class="about-company__body">
+						<div class="about-company__image-ibg"><img src="@img/about-company/01.jpg" alt=""></div>
+						<div class="about-company__content">
+							<h2 class="about-company__title">«Bazis medic» — это лицензированное учебное заведение, где вы сможете получить ценные знаний по косметологии у преподавателей с большим опытом работы в индустрии красоты.</h2>
+							<div class="about-company__text">
+								<p>Также в нашей клинике “BAZISS MEDICALL” предоставляются услуги по новейшим технологиям в сфере пластической и эстетической хирургии.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 
 			<!-- <section class="class">
 				<div class="class__container">
