--- a/src/home.html
+++ b/src/home.html
@@ -48,6 +48,34 @@
 				</div>
 			</section>
 
+			<section class="links-course">
+				<div class="links-course__container">
+					<div class="links-course__items">
+						<div class="links-course__item">
+							<div class="links-course__content">
+								<div class="links-course__title"><a href="#">Курсы</a></div>
+								<div class="links-course__text">
+									<p>Мы предлагаем Вам эксклюзивные программы обучения, которые включают в себя различные, прогрессивные направления
+										в сегодняшней индустрии красоты.</p>
+								</div>
+								<a href="#" class="links-course__link button button_line">ПОДРОБНЕЕ</a>
+							</div>
+							<a href="#" class="links-course__image-ibg"><img src="@img/links-course/01.jpg" alt=""></a>
+						</div>
+						<div class="links-course__item">
+							<div class="links-course__content">
+								<div class="links-course__title"><a href="#">Семинары</a></div>
+								<div class="links-course__text">
+									<p>В нашей клинике пластической хирургии BAZISS MEDICALL проводятся операции по новейшим технологиям в сфере пластической
+										и эстетической хирургии.</p>
+								</div>
+								<a href="#" class="links-course__link button button_line">ПОДРОБНЕЕ</a>
+							</div>
+							<a href="#" class="links-course__image-ibg"><img src="@img/links-course/02.jpg" alt=""></a>
+						</div>
+					</div>
+				</div>
+			</section>
 
 			<!-- <section class="class">
 				<div class="class__container">
