--- a/src/home.html
+++ b/src/home.html
@@ -53,7 +53,7 @@
 					<div class="links-course__items">
 						<div class="links-course__item">
 							<div class="links-course__content">
-								<div class="links-course__title"><a href="#">Курсы</a></div>
+								<div class="links-course__title title"><a href="#">Курсы</a></div>
 								<div class="links-course__text">
 									<p>Мы предлагаем Вам эксклюзивные программы обучения, которые включают в себя различные, прогрессивные направления
 										в сегодняшней индустрии красоты.</p>
@@ -64,7 +64,7 @@
 						</div>
 						<div class="links-course__item">
 							<div class="links-course__content">
-								<div class="links-course__title"><a href="#">Семинары</a></div>
+								<div class="links-course__title title"><a href="#">Семинары</a></div>
 								<div class="links-course__text">
 									<p>В нашей клинике пластической хирургии BAZISS MEDICALL проводятся операции по новейшим технологиям в сфере пластической
 										и эстетической хирургии.</p>
@@ -76,6 +76,28 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="equipment">
+				<div class="equipment__container">
+					<h2 class="equipment__title title">Оборудование и препараты</h2>
+					<div class="equipment__items">
+						<article class="equipment__item item-equipment">
+							<a href="#" class="item-equipment__image-ibg--contain"><img src="@img/equipment/01.jpg" alt=""></a>
+						</article>
+						<article class="equipment__item item-equipment">
+							<a href="#" class="item-equipment__image-ibg--contain"><img src="@img/equipment/02.jpg" alt=""></a>
+						</article>
+						<article class="equipment__item item-equipment">
+							<a href="#" class="item-equipment__image-ibg--contain"><img src="@img/equipment/03.jpg" alt=""></a>
+						</article>
+						<article class="equipment__item item-equipment">
+							<a href="#" class="item-equipment__image-ibg--contain"><img src="@img/equipment/04.jpg" alt=""></a>
+						</article>
+					</div>
+					<button class="equipment__button button button_bg">ПЕРЕЙТИ В КАТАЛОГ</button>
+				</div>
+			</section>
+
 
 			<!-- <section class="class">
 				<div class="class__container">
