--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,30 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__body">
+			<div class="footer__menu">
+				<a href="#" class="footer__logo"><img src="@img/logo.png" alt="Logo"></a>
+				<ul class="footer__list">
+					<div class="footer__item"><a href="#" class="footer__link">Обучение </a></div>
+					<div class="footer__item"><a href="#" class="footer__link">Семинары</a></div>
+					<div class="footer__item"><a href="#" class="footer__link">Отзывы</a></div>
+				</ul>
+				<ul class="footer__list">
+					<div class="footer__item"><a href="#" class="footer__link">О нас</a></div>
+					<div class="footer__item"><a href="#" class="footer__link">Блог</a></div>
+					<div class="footer__item"><a href="#" class="footer__link">Оборудование и препараты</a></div>
+				</ul>
+			</div>
+			<div class="footer__contact">
+				<a href="tel:+998909162123" class="footer__contact-item">+998909162123</a>
+				<a href="mailto:assotsiatsiya.uz@ya.ru" class="footer__contact-item">assotsiatsiya.uz@ya.ru</a>
+				<div class="footer__contact-item">г. Ташкент, Мирабадский р-н, ул. Афросияб, дом 12/1</div>
+			</div>
+		</div>
+		<div class="footer__social social">
+			<a href="#" class="social__item _icon-youtube"></a>
+			<a href="#" class="social__item _icon-facebook"></a>
+			<a href="#" class="social__item _icon-telegram"></a>
+			<a href="#" class="social__item _icon-instagram"></a>
+		</div>
 	</div>
 </footer>
