--- a/src/training.html
+++ b/src/training.html
@@ -104,6 +104,7 @@
                 </div>
             </section>
 
+            @@include('html/_submit.htm',{})
 
         </main>
         @@include('html/_footer.htm',{})
