--- a/src/home.html
+++ b/src/home.html
@@ -94,7 +94,7 @@
 							<a href="#" class="item-equipment__image-ibg--contain"><img src="@img/equipment/04.jpg" alt=""></a>
 						</article>
 					</div>
-					<button class="equipment__button button button_bg">ПЕРЕЙТИ В КАТАЛОГ</button>
+					<a href="#" class="equipment__button button button_bg">ПЕРЕЙТИ В КАТАЛОГ</a>
 				</div>
 			</section>
 
