--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 			<li><a target="_blank" href="about.html">О нас</a></li>
 			<li><a target="_blank" href="training.html">Обучение</a></li>
 			<li><a target="_blank" href="seminars.html">Семинары</a></li>
+			<li><a target="_blank" href="equipment.html">Оборудование</a></li>
 		</ol>
 		<!-- <h2>Попапы:</h2>
 			<ol class="rootpage__list">
