--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 			<li><a target="_blank" href="equipment.html">Оборудование</a></li>
 			<li><a target="_blank" href="seminar.html">Страница семинара</a></li>
 			<li><a target="_blank" href="blog.html">Блог</a></li>
+			<li><a target="_blank" href="product.html">Карточка товара</a></li>
 		</ol>
 		<!-- <h2>Попапы:</h2>
 			<ol class="rootpage__list">
