--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 			<li><a target="_blank" href="seminar.html">Страница семинара</a></li>
 			<li><a target="_blank" href="blog.html">Блог</a></li>
 			<li><a target="_blank" href="product.html">Карточка товара</a></li>
+			<li><a target="_blank" href="article-blog.html">Карточка блога</a></li>
 		</ol>
 		<!-- <h2>Попапы:</h2>
 			<ol class="rootpage__list">
