add blog article and courses pages

--- a/src/about.html
+++ b/src/about.html
@@ -18,8 +18,8 @@
                         </div>
                         <div class="hero__line">
                             <div class="hero__buttons">
-                                <button class="hero__button button">КУРСЫ</button>
-                                <button class="hero__button button">СЕМИНАРЫ</button>
+                                <a href="#" class="hero__button button">КУРСЫ</a>
+                                <a href="#" class="hero__button button">СЕМИНАРЫ</a>
                             </div>
                         </div>
 
