--- a/src/home.html
+++ b/src/home.html
@@ -98,16 +98,9 @@
 				</div>
 			</section>
 
-
-			<!-- <section class="class">
-				<div class="class__container">
-					<div class="class__body">
-
-					</div>
-				</div>
-			</section> -->
 		</main>
 		@@include('html/_footer.htm',{})
+		@@include('html/_popup.htm',{})
 	</div>
 	@@include('html/_js.htm',{})
 </body>
