--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,24 @@
 			<li><a target="_blank" href="about.html">О нас</a></li>
 			<li><a target="_blank" href="training.html">Обучение</a></li>
 			<li><a target="_blank" href="seminars.html">Семинары</a></li>
-			<li><a target="_blank" href="equipment.html">Оборудование</a></li>
 			<li><a target="_blank" href="seminar.html">Страница семинара</a></li>
-			<li><a target="_blank" href="blog.html">Блог</a></li>
+			<li><a target="_blank" href="equipment.html">Оборудование</a></li>
 			<li><a target="_blank" href="product.html">Карточка товара</a></li>
+			<li><a target="_blank" href="blog.html">Блог</a></li>
 			<li><a target="_blank" href="article-blog.html">Карточка блога</a></li>
+			<li>
+				<div>Страницы курсов</div>
+				<ul>
+					<li><a target="_blank" href="article-course01.html">Курс «Младшая медсестра
+							в косметологии»</a></li>
+					<li><a target="_blank" href="article-course02.html">Курс «Тредлифтинг - Мезонити и 3D нити»</a></li>
+					<li><a target="_blank" href="article-course03.html">Курс «Инъекции ботокс»</a></li>
+					<li><a target="_blank" href="article-course04.html">Курс «Филлеры»</a></li>
+					<li><a target="_blank" href="article-course05.html">Курс «Мезотерапия»</a></li>
+					<li><a target="_blank" href="article-course06.html">Курс «Татуаж»</a></li>
+					<li><a target="_blank" href="article-course07.html">Курс «Косметолог-Эстет»</a></li>
+				</ul>
+			</li>
 		</ol>
 		<!-- <h2>Попапы:</h2>
 			<ol class="rootpage__list">
@@ -79,6 +92,10 @@
 
 	img {
 		vertical-align: top;
+	}
+
+	li div {
+		margin-bottom: 15px;
 	}
 
 	.wrapper {
