--- a/src/product.html
+++ b/src/product.html
@@ -20,7 +20,7 @@
                                     Средство популярно для увеличения губ, коррекции большинства распространенных дефектов (носогубные складки, межбровные заломы, крупные марионетки, губоподбородочные складки).
                                     Гель средней плотности, вводится на уровне гиподермы. </p>
                             </div>
-                            <button class="product__button button button_line">Купить </button>
+                            <button class="product__button button button_line" data-popup="#buy">Купить </button>
                         </div>
                     </div>
                     <div class="product__description description-product">
@@ -84,6 +84,7 @@
 
         </main>
         @@include('html/_footer.htm',{})
+        @@include('html/_popup.htm',{})
     </div>
     @@include('html/_js.htm',{})
 </body>
