--- a/src/seminar.html
+++ b/src/seminar.html
@@ -24,7 +24,7 @@
                             </ul>
                             <div class="seminar__price">Стоимость: 250 000 сум</div>
                             <div class="seminar__adress">Адрес: г. Ташкент, Мирабадский р-н, ул. Афросияб, дом 12/1 Регистрация по номеру: <a href="tel:+998994811155">+998 99 481-11-55</a></div>
-                            <button class="seminar__button button button_line">Записаться на семинар</button>
+                            <button class="seminar__button button button_line" data-popup="#contact">Записаться на семинар</button>
                         </div>
                     </div>
                 </div>
@@ -57,6 +57,7 @@
 
         </main>
         @@include('html/_footer.htm',{})
+        @@include('html/_popup.htm',{})
     </div>
     @@include('html/_js.htm',{})
 </body>
