--- a/src/training.html
+++ b/src/training.html
@@ -15,7 +15,7 @@
                         <h1 class="hero__title">Высшая школа косметологии и эстетической медицины</h1>
                         <div class="hero__line">
                             <div class="hero__buttons">
-                                <button class="hero__button button">СВЯЗАТЬСЯ С НАМИ</button>
+                                <button class="hero__button button" data-popup="#contact">СВЯЗАТЬСЯ С НАМИ</button>
                             </div>
                         </div>
                     </div>
@@ -108,6 +108,7 @@
 
         </main>
         @@include('html/_footer.htm',{})
+        @@include('html/_popup.htm',{})
     </div>
     @@include('html/_js.htm',{})
 </body>
