--- a/src/html/_submit.htm
+++ b/src/html/_submit.htm
@@ -3,7 +3,7 @@
         <div class="submit-block__body">
             <h5 class="submit-block__title">Запишитесь на курсы!</h5>
             <div class="submit-block__text">Свяжитесь с нами! Мы с радостью ответим на любые вопросы. </div>
-            <button class="submit-block__button button">ЗАПИСАТЬСЯ НА КУРСЫ</button>
+            <button class="submit-block__button button" data-popup="#contact">ЗАПИСАТЬСЯ НА КУРСЫ</button>
         </div>
     </div>
     <div class="submit-block__bg-ibg"><img src="@img/submit/01.jpg" alt=""></div>
