--- a/src/seminars.html
+++ b/src/seminars.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="hero__line">
                             <div class="hero__buttons">
-                                <button class="hero__button button">СВЯЗАТЬСЯ С НАМИ</button>
+                                <button class="hero__button button" data-popup="#contact">СВЯЗАТЬСЯ С НАМИ</button>
                             </div>
                         </div>
                     </div>
@@ -98,6 +98,7 @@
 
         </main>
         @@include('html/_footer.htm',{})
+        @@include('html/_popup.htm',{})
     </div>
     @@include('html/_js.htm',{})
 </body>
