--- a/src/article-course04.html
+++ b/src/article-course04.html
@@ -90,7 +90,7 @@
                             </div>
 
                         </div>
-                        <button data-showmore-button type="button" class="showmore__more"><span>Показать еще</span><span>Скыть</span></button>
+                        <button data-showmore-button type="button" class="showmore__more"><span>Показать еще</span><span>Скрыть</span></button>
                     </div>
 
                 </div>
