--- a/src/article-course07.html
+++ b/src/article-course07.html
@@ -28,7 +28,7 @@
 
                     <div data-showmore="items" class="article-course__showmore showmore">
                         <div data-showmore-button class="showmore__title">Описание курса</div>
-                        <div data-showmore-content="2" class="showmore__content">
+                        <div data-showmore-content="1" class="showmore__content">
                             <p>Обучение технике нанесения новинок гипсовых, альгинатно-водорослевых и пластифицирующих масок. Обучение — 1 месяц. Каждый день по 4 часа: 2 часа теории, 2 часа практики. Каждую пятницу семинар — тренинги по пройденным темам.</p>
 
                             <div class="showmore__images">
@@ -77,7 +77,7 @@
                             </div>
 
                         </div>
-                        <button data-showmore-button type="button" class="showmore__more"><span>Показать еще</span><span>Скыть</span></button>
+                        <button data-showmore-button type="button" class="showmore__more"><span>Показать еще</span><span>Скрыть</span></button>
                     </div>
 
                 </div>
